# MetaDedup

./: .gitignore  CMakeLists.txt  README.md
conf/: test.json
output/: 1.txt  2.txt
src/benchmark/: run.cpp
src/chunking/: chunk_module.cpp  chunk_module.h
src/common/: common.h  config.h  env.h  stats.h
src/compression/: compression_module.cpp  compression_module.h  selective_compression_module.cpp  selective_compression_module.h
src/deduplication/: deduplication_module.cpp  deduplication_module.h  selective_deduplication.cpp  selective_deduplication.h
src/io/: device.cpp  device.h  io_module.cpp  io_module.h
src/manage/: manage_module.cpp  manage_module.h
src/meta/: meta_dedup.cpp  meta_dedup.h
src/metadata/: bitmap.h  bucket.cpp  bucket.h  index.cpp  index.h  meta_verification.cpp  meta_verification.h  metadata_module.cpp  metadata_module.h  reference_counter.cpp  reference_counter.h
src/metadata/cache_policies/: bucket_aware_lru.cpp  bucket_aware_lru.h  cache_policy.cpp  cache_policy.h  least_reference_count.cpp  least_reference_count.h  lru.cpp  lru.h
